test/compiler_errors/invalid-node-name.lzx
<!-- declaring an attribute with an illegal name throws error-->
<canvas width="300" height="200" bgcolor="red"> 

  <view name="bad-id">
  </view>

</canvas>
<!-- * X_LZ_COPYRIGHT_BEGIN ***************************************************
* Copyright 2001-2004, 2008 Laszlo Systems, Inc.  All Rights Reserved.              *
* Use is subject to license terms.                                            *
* X_LZ_COPYRIGHT_END ****************************************************** -->
